// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dev/Numeric Content Large 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi"
        >
          1Ñç
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            M
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--small-tile"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                        
        <div
          class="fd-numeric-content__kpi"
        >
          1Ñç
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            milçM
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Dev/Numeric Content Launch Icon Large 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi"
        >
          123
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            milçM
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--small-tile"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
        >
          1234
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Dev/Numeric Content Launch Icon Medium 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--m"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
        >
          -889
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--negative"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            M
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--m fd-numeric-content--small-tile"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--informative"
        >
          -88 88
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--informative"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            milÇ
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Dev/Numeric Content Launch Icon Small 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--s"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--critical"
        >
          123
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--critical"
        >
          
                        
          <i
            aria-label="increase"
            class="fd-numeric-content__scale-arrow sap-icon--up"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            ÑÇmlč
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--s fd-numeric-content--small-tile"
    >
      
                
      <div
        class="fd-numeric-content__launch-icon-container"
      >
        
                    
        <i
          class="fd-numeric-content__launch-icon sap-icon--line-charts"
          role="presentation"
        />
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
        >
          123
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--positive"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            ÑÇmlč
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Dev/Numeric Content Medium 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--m"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
        >
          123
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--positive"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--m fd-numeric-content--small-tile"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
        >
          -889
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--negative"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Dev/Numeric Content Small 1`] = `
<section>
  

  <div
    class="tile-content-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--s"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--critical"
        >
          12
        </div>
        
                
      </div>
      
                
      <div
        class="fd-numeric-content__scale-container"
      >
        
                    
        <div
          class="fd-numeric-content__scale fd-numeric-content__scale--critical"
        >
          
                        
          <i
            aria-label="decrease"
            class="fd-numeric-content__scale-arrow sap-icon--down"
          />
          
                        
          <span
            class="fd-numeric-content__scale-text"
          >
            %
          </span>
          
                    
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

  <br />
  

  <div
    class="tile-content-small-playground"
  >
    
        
    <div
      class="fd-numeric-content fd-numeric-content--small-tile fd-numeric-content--m"
    >
      
                
      <div
        class="fd-numeric-content__kpi-container"
      >
        
                    
        <div
          class="fd-numeric-content__kpi fd-numeric-content__kpi--informative"
        >
          1.95
        </div>
        
                
      </div>
      
        
    </div>
    

  </div>
  

</section>
`;
